--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,7 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     /* gap: 2rem; */
+    /* overflow-x: scroll; */
 }
 .project-heading .dot{
     font-size: 3rem;
@@ -303,8 +304,9 @@
     align-items: center;
 }
 .about p{
-    text-align: justify;
-    /* text-align: center; */
+    margin-top: 0.5rem;
+    /* text-align: justify; */
+    text-align: center;
 
     /* justify-content: space-around; */
 }
@@ -329,6 +331,9 @@
 /* ::-webkit-scrollbar-track{
     background-color: #FCFCFD;
 } */
+
+
+
 @media(max-width:750px){
     .home{
         display: flex;
@@ -391,7 +396,7 @@
         align-items: center;
         cursor: pointer;
         position: relative;
-        right: 2rem;
+        right: 1.5rem;
     }
     .menu-btn:hover{
         /* transition: 3s ease-in-out; */
@@ -407,7 +412,6 @@
     .project{
         display: flex;
         flex-direction: column;
-        
     }
     .project-item{
         display: flex;
