--- a/src/index.css
+++ b/src/index.css
@@ -254,7 +254,7 @@
     /* margin-top: 10px; */
 }
 .about{
-    width: 90%;
+    width: 85%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -269,7 +269,7 @@
 .about h2{
     /* text-align: center; */
     font-size: 1.3rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     /* padding: 1px; */
     /* text-decoration: underline; */
 }
@@ -278,7 +278,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
     /* margin/-left: auto; */
     /* margin-right: auto; */
 }
