--- a/src/Project.css
+++ b/src/Project.css
@@ -8,8 +8,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    /* width: 800px; */
-    /* width: 100%; */
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -20,25 +18,28 @@
 .project-btn{
     background: #6E06F2;
     padding: 10px 15px;
+    position: relative;
+    top: 1rem;
     margin-bottom: 2rem;
     border-radius: 5px;
     margin-top: 1rem;
-}
-h1{
-    margin-top: 2rem;
 }
 .project-description{
     background: #1b2430;
     color: #fff;
     display: flex;
     padding: 5px;
-    margin-top:1rem;
     width: 100%;
     text-align: center;
     border-radius:10px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.project p{
+    font-weight: 500;
+    position: relative;
+    top: 0.5rem;
 }
 .project-description h2{
     font-size: 1.2rem;
